--- a/public/index.html
+++ b/public/index.html
@@ -5,21 +5,23 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <!-- meta keywords -->
-    <meta name="keywords" content="template, webdesign, html, css" />
-    <meta name="robots" content="NOODP,index,follow" />
-    <meta
-      name="description"
-      content="Tigris is a multichain decentralized leveraged exchange featuring instant settlement, no spread and no slippage."
-    />
-    <meta property="og:image" content="%PUBLIC_URL%/assets/images/TigrisPreview.png" />
+    <meta name="description" content="Web site created using create-react-app" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <!--
+      manifest.json provides metadata used when your web app is installed on a
+      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
+    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Tigris Trade</title>
-    ‎
-    <!-- font awesome -->
-    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/font-awesome-4.7.0.min.css" />
+    <!--
+      Notice the use of %PUBLIC_URL% in the tags above.
+      It will be replaced with the URL of the `public` folder during the build.
+      Only files inside the `public` folder can be referenced from the HTML.
+
+      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
+      work correctly both with client-side routing and a non-root public URL.
+      Learn how to configure a non-root public URL by running `npm run build`.
+    -->
+    <title>React App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -34,12 +36,5 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-
-    <!-- jquery js -->
-    <script src="%PUBLIC_URL%/assets/js/jquery.min.js"></script>
-    <!-- bootstrap js -->
-    <script src="%PUBLIC_URL%/assets/js/bootstrap.bundle.min.js"></script>
-    <!-- custom js -->
-    <script src="%PUBLIC_URL%/assets/js/custom.js"></script>
   </body>
 </html>
