--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app" />
+    <meta
+    name="description"
+    content="Tigris is a multichain decentralized leveraged exchange featuring instant settlement and no slippage."
+    />
+    <meta
+    property="og:image"
+    content="%PUBLIC_URL%/assets/images/TigrisPreview.png"
+    />  
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
