--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
     property="og:image"
     content="%PUBLIC_URL%/assets/images/TigrisPreview.png"
     />  
+    <meta name="twitter:card" content="summary_large_image">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
