--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     />
     <meta
     property="og:image"
-    content="%PUBLIC_URL%/assets/images/TigrisPreview.webp"
+    content="%PUBLIC_URL%/assets/images/TigrisPreview.png"
     />  
     <meta name="twitter:card" content="summary_large_image">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
